[gd_scene load_steps=11 format=2]

[ext_resource path="res://Juego/Estacion/zona_recarga.png" type="Texture" id=1]
[ext_resource path="res://Juego/Estacion/estacion_recarga.png" type="Texture" id=2]
[ext_resource path="res://Juego/Estacion/EstacionRecarga.gd" type="Script" id=3]
[ext_resource path="res://Juego/Estacion/vacio.ogg" type="AudioStream" id=4]
[ext_resource path="res://Juego/Estacion/carga.ogg" type="AudioStream" id=5]

[sub_resource type="CapsuleShape2D" id=1]
radius = 71.0
height = 152.0

[sub_resource type="CircleShape2D" id=2]
radius = 374.108

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AreaEstacion/Estacion:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AreaEstacion/CollisionShape2D:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 90.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AreaEstacion/Estacion:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 90.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AreaRecarga/ZonaRecarga:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 29, 29 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("AreaRecarga/CollisionShape2D:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.9, 0.9 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "activado"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AreaEstacion/CollisionShape2D:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 90.0, 180.0, 360.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AreaEstacion/Estacion:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 90.0, 180.0, 360.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AreaRecarga/ZonaRecarga:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.9, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 31.5, 31.5 ), Vector2( 29, 29 ), Vector2( 31.5, 31.5 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AreaRecarga/CollisionShape2D:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.9, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.9, 0.9 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "default"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AreaEstacion/CollisionShape2D:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AreaEstacion/Estacion:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AreaRecarga/ZonaRecarga:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 31.5, 31.5 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AreaRecarga/CollisionShape2D:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[node name="EstacionRecarga" type="Node2D"]
script = ExtResource( 3 )

[node name="AreaEstacion" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 29

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaEstacion"]
rotation = 1.5708
shape = SubResource( 1 )

[node name="Estacion" type="Sprite" parent="AreaEstacion"]
rotation = 1.5708
z_index = 1
texture = ExtResource( 2 )

[node name="AreaRecarga" type="Area2D" parent="."]
collision_layer = 0
space_override = 1
gravity_point = true
gravity = 1000.0

[node name="ZonaRecarga" type="Sprite" parent="AreaRecarga"]
modulate = Color( 0.0117647, 0.231373, 0.254902, 0.294118 )
scale = Vector2( 29, 29 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaRecarga"]
scale = Vector2( 0.9, 0.9 )
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "activado"
anims/RESET = SubResource( 3 )
anims/activado = SubResource( 4 )
anims/default = SubResource( 5 )

[node name="CargaSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="VacioSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[connection signal="body_entered" from="AreaEstacion" to="." method="_on_AreaEstacion_body_entered"]
[connection signal="body_entered" from="AreaRecarga" to="." method="_on_AreaRecarga_body_entered"]
[connection signal="body_exited" from="AreaRecarga" to="." method="_on_AreaRecarga_body_exited"]
